--- a/index.html
+++ b/index.html
@@ -5,8 +5,99 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <div>
+        <a href="#"><img src="https://via.placeholder.com/220x47" alt="логотип магазина"></a>
+        <ul>
+          <li><p>Поиск</p></li>
+          <li><p>Закладки</p></li>
+          <li><p>Корзина</p></li>
+          <li><button type="button">Оформить заказ</button></li>
+        </ul>
+        <div>
+          <p>Интернет-магазин строительных 
+            материалов и инструментов для ремонта
+          </p>
+        </div>
+        <div>
+          <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
+        <div>
+          <button type="button">Войти</button>
+          <button type="button">Регистрация</button>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="blank.html">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="blank.html">Новости</a></li>
+            <li><a href="blank.html">Спецпредложения</a></li>
+            <li><a href="blank.html">Доставка</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <h1>Техномарт</h1>
+      ////////////////////
+      <section>
+        <h2>КОМПАНИЯ «Техномарт</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
+          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+        </p> 
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!
+          Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul>
+          <li><p>Деловые линии</p> </li>
+          <li><p>Автотрейдинг</p></li>
+          <li><p>ЖелДорЭкспедиция</p></li>
+        </ul>
+        <a href="blank.html">Подробнее о компании</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, 
+          заехав в наш офис:
+        </p>
+        <a href="#"><img src="https://via.placeholder.com/300x158" alt="изображение магазина на карте города"></a>
+        <a href="blank.html">Заблудились? Напишите нам!</a> 
+      </section>
+    </main>
+    <footer>
+      <a href="#"><img src="https://via.placeholder.com/220x68" alt="логотип магазина"></a>
+      <nav>
+        <ul>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </nav>
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
+      <nav>
+        <ul>
+          <li><a href="blank.html">Материалы</a></li>
+          <li><a href="blank.html">Техника</a></li>
+          <li><a href="blank.html">Инструмент</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li> 
+        </ul>
+      </nav>
+      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+      <section>
+        <h2>Социальные сети</h2>
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+      </section>
+      <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+      <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+    </footer>
   </body>
 </html>
