--- a/catalog.html
+++ b/catalog.html
@@ -6,19 +6,19 @@
 </head>
 <body>
   <header>
-    <div>
+    <section>
       <a href="#"><img src="https://via.placeholder.com/220x47" alt="логотип магазина"></a>
-      <ul>
-        <li><p>Поиск</p></li>
-        <li><p>Закладки</p></li>
-        <li><p>Корзина</p></li>
-        <li><button type="button">Оформить заказ</button></li>
-      </ul>
-      <div>
-        <p>Интернет-магазин строительных 
-          материалов и инструментов для ремонта
-        </p>
-      </div>
+      <form action="POST" >
+        <input type="search" placeholder="Поиск">
+      </form>
+      <a href="blank.html">Закладки</a>
+      <a href="blank.html">Корзина</a>
+      <button type="button">Оформить заказ</button> 
+    </section>
+    <div>
+      <p>Интернет-магазин строительных 
+        материалов и инструментов для ремонта
+      </p>
       <div>
         <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -26,7 +26,18 @@
       <div>
         <button type="button">Войти</button>
         <button type="button">Регистрация</button>
-      </div>
+        <a href="blank.html">
+          <img src="https://via.placeholder.com/20x18" alt="иконка пользователя">
+          Равшан Джамшутович
+        </a>
+        <a href="">
+          <img src="https://via.placeholder.com/20x17" alt="кнопка выхода">
+        </a>
+        <a href="blank.html">Мои заказы</a>
+        <a href="blank.html">Личный кабинет</a>
+      </div>  
+    </div>
+    <section>
       <nav>
         <ul>
           <li><a href="index.html">Главная</a></li>
@@ -38,18 +49,20 @@
           <li><a href="blank.html">Контакты</a></li>
         </ul>
       </nav>
-    </div>
+    </section>
   </header>
   <main>
     <h1>ПЕРФОРАТОРЫ</h1>
     <section>
       <h2>Меню "хлебные крошки"</h2>
-      <a href="catalog.html">Каталог</a>
-      <a href="blank.html">Инструмент</a>
-      <a href="catalog.html">Перфораторы</a>
+      <ul>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="blank.html">Инструмент</a></li>
+        <li><a href="catalog.html">Перфораторы</a></li>
+      </ul>
     </section>
     <section>
-      <h2>ФИЛЬТР:</h2>
+      <h2>Фильтр:</h2>
       <aside>
         <form action="https://echo.htmlacademy.ru/" method="POST">
           <div>
@@ -57,88 +70,105 @@
             <!-- Фильтр по цене -->
           </div>
           <div>
-            <h3>ПРОИЗВОДИТЕЛИ:</h3>
+            <h3>Производители:</h3>
             <ul>
-              <li><input type="radio"> BOSCH</li>
-              <li><input type="radio">ИНТЕРСКОЛ</li>
-              <li><input type="radio" >MAKIta</li>
+              <li><input type="radio"> Bosch</li>
+              <li><input type="radio">Интерскол</li>
+              <li><input type="radio" >Makita</li>
               <li><input type="radio" >Dewalt</li>
               <li><input type="radio" >Hitachi</li>
             </ul>
           </div>
           <div>
-            <h3>ПИТАНИЕ:</h3>
+            <h3>Питание:</h3>
             <ul>
               <li><input type="radio" >Аккумуляторные</li>
               <li><input type="radio" >Сетевые</li>
             </ul>
           </div>
-          <input type="submit" value="ПОКАЗАТЬ">
+          <input type="submit" value="Показать">
         </form>
       </aside>
     </section>
     <section>
-      <h2>СОРТИРОВКА:</h2>
-      <p>ПО ЦЕНЕ</p>
-      <p>ПО ТИПУ</p>
-      <p>ПО ФУНКЦИОНАЛУ</p>
+      <h2>Сортировка:</h2>
+      <p>По цене</p>
+      <p>По</p>
+      <p>По функционалу</p>
       <button>UP</button>
       <button>DOWN</button>
     </section>
     <section>
       <h2>Карточки товаров</h2>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор Bosch bfg 6000</h3>
           <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
-          <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
-        </article>
-        <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
-          <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
-        </article>
-        <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <button>КУПИТЬ</button>
+          <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор Bosch bfg 6000</h3>
           <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор Bosch bfg 6000</h3>
           <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
+          <h3>Перфоратор Bosch bfg 6000</h3>
+          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
+          <h3>Перфоратор Bosch bfg 6000</h3>
+          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </article>
+        <article>
+          <h3>Перфоратор Bosch bfg 6000</h3>
+          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </article>
+        <article>
+          <h3>Перфоратор Bosch bfg 6000</h3>
+          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </article>
@@ -146,33 +176,34 @@
   </main>
   <footer>
     <a href="#"><img src="https://via.placeholder.com/220x68" alt="логотип магазина"></a>
-    <nav>
-      <ul>
-        <li><a href="blank.html">Компания</a></li>
-        <li><a href="blank.html">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="blank.html">Доставка</a></li>
-        <li><a href="blank.html">Контакты</a></li>
-      </ul>
-    </nav>
+    <section>  
+      <nav>
+        <ul>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </section>  
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
-    <nav>
-      <ul>
-        <li><a href="blank.html">Материалы</a></li>
-        <li><a href="blank.html">Техника</a></li>
-        <li><a href="blank.html">Инструмент</a></li>
-        <li><a href="blank.html">Спецпредложения</a></li>
-      </ul>
-    </nav>
-    <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
     <section>
-      <h2>Социальные сети</h2>
+      <nav>
+        <ul>
+          <li><a href="blank.html">Материалы</a></li>
+          <li><a href="blank.html">Техника</a></li>
+          <li><a href="blank.html">Инструмент</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li> 
+        </ul>
+      </nav>
+    </section>
+    <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
       <ul>
         <li><a href="#">Вконтакте</a></li>
         <li><a href="#">Фейсбук</a></li>
         <li><a href="#">Инстаграм</a></li>
       </ul>
-    </section>
     <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
     <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
   </footer>
