--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   </head>
   <body>
     <header>
-      <div>
+      <section>
         <a href="#"><img src="https://via.placeholder.com/220x47" alt="логотип магазина"></a>
-        <ul>
-          <li><p>Поиск</p></li>
-          <li><p>Закладки</p></li>
-          <li><p>Корзина</p></li>
-          <li><button type="button">Оформить заказ</button></li>
-        </ul>
-        <div>
-          <p>Интернет-магазин строительных 
-            материалов и инструментов для ремонта
-          </p>
-        </div>
+        <form action="POST" >
+          <input type="search" placeholder="Поиск">
+        </form>
+        <a href="blank.html">Закладки</a>
+        <a href="blank.html">Корзина</a>
+        <button type="button">Оформить заказ</button> 
+      </section>
+      <div>
+        <p>Интернет-магазин строительных 
+          материалов и инструментов для ремонта
+        </p>
         <div>
           <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -26,7 +26,18 @@
         <div>
           <button type="button">Войти</button>
           <button type="button">Регистрация</button>
-        </div>
+          <a href="blank.html">
+            <img src="https://via.placeholder.com/20x18" alt="иконка пользователя">
+            Равшан Джамшутович
+          </a>
+          <a href="">
+            <img src="https://via.placeholder.com/20x17" alt="кнопка выхода">
+          </a>
+          <a href="blank.html">Мои заказы</a>
+          <a href="blank.html">Личный кабинет</a>
+        </div>  
+      </div>
+      <section>
         <nav>
           <ul>
             <li><a href="index.html">Главная</a></li>
@@ -38,13 +49,13 @@
             <li><a href="blank.html">Контакты</a></li>
           </ul>
         </nav>
-      </div>
+      </section>
     </header>
     <main>
       <h1>Техномарт</h1>
       ////////////////////
       <section>
-        <h2>КОМПАНИЯ «Техномарт</h2>
+        <h2>Компания «Техномарт</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
         </p> 
@@ -69,33 +80,34 @@
     </main>
     <footer>
       <a href="#"><img src="https://via.placeholder.com/220x68" alt="логотип магазина"></a>
-      <nav>
-        <ul>
-          <li><a href="blank.html">Компания</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
-        </ul>
-      </nav>
+      <section>  
+        <nav>
+          <ul>
+            <li><a href="blank.html">Компания</a></li>
+            <li><a href="blank.html">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="blank.html">Доставка</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+        </nav>
+      </section>  
       <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
-      <nav>
-        <ul>
-          <li><a href="blank.html">Материалы</a></li>
-          <li><a href="blank.html">Техника</a></li>
-          <li><a href="blank.html">Инструмент</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li> 
-        </ul>
-      </nav>
-      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
       <section>
-        <h2>Социальные сети</h2>
+        <nav>
+          <ul>
+            <li><a href="blank.html">Материалы</a></li>
+            <li><a href="blank.html">Техника</a></li>
+            <li><a href="blank.html">Инструмент</a></li>
+            <li><a href="blank.html">Спецпредложения</a></li> 
+          </ul>
+        </nav>
+      </section>
+      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
         <ul>
           <li><a href="#">Вконтакте</a></li>
           <li><a href="#">Фейсбук</a></li>
           <li><a href="#">Инстаграм</a></li>
         </ul>
-      </section>
       <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
       <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
     </footer>
