--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
   <header>
     <section>
       <a href="#"><img src="https://via.placeholder.com/220x47" alt="логотип магазина"></a>
+      <h2>Панель пользователя</h2>
       <form action="POST" >
         <input type="search" placeholder="Поиск">
       </form>
@@ -38,6 +39,7 @@
       </div>  
     </div>
     <section>
+      <h2>Главная навигация по страницам сайта</h2>
       <nav>
         <ul>
           <li><a href="index.html">Главная</a></li>
@@ -67,7 +69,9 @@
         <form action="https://echo.htmlacademy.ru/" method="POST">
           <div>
             <h3>Цена</h3>
-            <!-- Фильтр по цене -->
+            <input type="text"> <!--Ползунок цены-->
+            <span></span> <!--цена мин-->
+            <span></span> <!--цена макс-->
           </div>
           <div>
             <h3>Производители:</h3>
@@ -173,10 +177,26 @@
           <button type="button">25500 Р.</button>
         </article>
     </section>
+    <section>
+      <h2>Навигация по страницам</h2>
+      <ul>
+        <li><a href="#"></a>1</li>
+        <li><a href="#"></a>2</li>
+        <li><a href="#"></a>3</li>
+        <li><a href="#"></a>Следующая</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Пара слов о перфораторах</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+        В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+    </section>
   </main>
   <footer>
     <a href="#"><img src="https://via.placeholder.com/220x68" alt="логотип магазина"></a>
-    <section>  
+    <section>
+      <h2>Навигация по страницам сайта</h2>  
       <nav>
         <ul>
           <li><a href="blank.html">Компания</a></li>
@@ -189,6 +209,7 @@
     </section>  
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
     <section>
+      <h2>навигация по товарам\услугам</h2>
       <nav>
         <ul>
           <li><a href="blank.html">Материалы</a></li>
