--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header>
       <section>
         <a href="#"><img src="https://via.placeholder.com/220x47" alt="логотип магазина"></a>
+        <h2>Панель пользователя</h2>
         <form action="POST" >
           <input type="search" placeholder="Поиск">
         </form>
@@ -38,6 +39,7 @@
         </div>  
       </div>
       <section>
+        <h2>Главная навигация по страницам сайта</h2>
         <nav>
           <ul>
             <li><a href="index.html">Главная</a></li>
@@ -53,7 +55,137 @@
     </header>
     <main>
       <h1>Техномарт</h1>
-      ////////////////////
+      <section>
+        <h2>Промо-блок</h2>
+        <article>
+          <h3>Материалы</h3>
+          <a href="blank.html">На любой вкус</a>
+        </article>
+        <article>
+          <h3>Инструмент</h3>
+          <a href="blank.html">На все случаи</a>
+        </article>
+        <article>
+          <h3>Техника</h3>
+          <a href="blank.html">Для стройки</a>
+        </article>
+        <article>
+          <h3>Скидки 50%</h3>
+          <a href="blank.html">На 350 товаров</a>
+        </article>
+        <article>
+          <h3>Доставка</h3>
+          <a href="blank.html">Бесплатно</a>
+        </article>
+        <article>
+          <h3>Перфораторы</h3>
+          <p>Настоящие мужские игрушки</p>
+          <button type="button"><</button>
+          <button type="button">></button>
+          <a href="catalog.html">Открыть каталог</a>
+          <!-- <span>радио точка</span> -->
+          <!-- <span>радио точка</span> -->
+        </article>
+      </section>
+      <section>
+        <h2>Популярные товары:</h2>
+        <a href="catalog.html">На все популярные товары</a>
+        <article>
+          <h3>Перфоратор Bosch bfg 9000</h3>
+          <img src=" https://via.placeholder.com/184x164" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>32500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </article>
+        <article>
+          <h3>Перфоратор Bosch bfg 3000</h3>
+          <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>22500 Р.</p>
+          <button type="button">15500 Р.</button>
+        </article>
+        <article>
+          <h3>Перфоратор Bosch bfg 6000</h3>
+          <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </article>
+        <article>
+          <h3>Перфоратор Bosch bfg 2000</h3>
+          <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <!-- <p>12500 Р.</p> -->
+          <button type="button">12500 Р.</button>
+        </article>
+      </section>
+      <section>
+        <h2>Популярные производители</h2>
+        <a href="catalog.html">Все производители</a>
+        <article>
+          <h3>Bosch</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Bosch"></a>
+        </article>
+        <article>
+          <h3>Makita</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Makita"></a>
+        </article>
+        <article>
+          <h3>DeWALT</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="DeWALT"></a>
+        </article>
+        <article>
+          <h3>Интерскол</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Интерскол"></a>
+        </article>
+        <article>
+          <h3>Hitachi</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Hitachi"></a>
+        </article>
+        <article>
+          <h3>Lg</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Lg"></a>
+        </article>
+        <article>
+          <h3>Aeg Power Solutions</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Aeg Power Solutions"></a>
+        </article>
+        <article>
+          <h3>metabo</h3>
+          <a href="#"><img src="https://via.placeholder.com/220x145" alt="metabo work. dont play."></a>
+        </article>
+      </section>
+      <section>
+        <h2>Сервисы</h2>
+        <div>
+          <p>Доставка</p>
+        </div>
+        <div>
+          <p>Гарантия</p>
+        </div>
+        <div>
+          <p>Кредит</p>
+        </div>
+        <section>
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо 
+            к вашему подъезду совершенно бесплатно!
+            Ведь мы неплохо заработаем, 
+            поднимая его на ваш этаж!</p>
+        </section>
+        <section>
+          <h3>Гарантия</h3>
+          <p></p>
+        </section>
+        <section>
+          <h3>Кредит</h3>
+          <p></p>
+        </section>
+      </section>
       <section>
         <h2>Компания «Техномарт</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
@@ -80,7 +212,8 @@
     </main>
     <footer>
       <a href="#"><img src="https://via.placeholder.com/220x68" alt="логотип магазина"></a>
-      <section>  
+      <section>
+        <h2>Навигация по страницам сайта</h2>  
         <nav>
           <ul>
             <li><a href="blank.html">Компания</a></li>
@@ -93,6 +226,7 @@
       </section>  
       <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
       <section>
+        <h2>навигация по товарам\услугам</h2>
         <nav>
           <ul>
             <li><a href="blank.html">Материалы</a></li>
