--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
           <!-- <span>радио точка</span> -->
           <!-- <span>радио точка</span> -->
         </article>
+        <article>
+          <h3>Дрели</h3>
+          <p>Соседям на радость</p>
+          <button type="button"><</button>
+          <button type="button">></button>
+          <a href="catalog.html">Открыть каталог</a>
+          <!-- <span>радио точка</span> -->
+          <!-- <span>радио точка</span> -->
+        </article>
       </section>
       <section>
         <h2>Популярные товары:</h2>
@@ -93,85 +102,91 @@
         <article>
           <h3>Перфоратор Bosch bfg 9000</h3>
           <img src=" https://via.placeholder.com/184x164" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <div>
+            <button>Купить</button>
+            <button>В закладки</button>
+          </div>
           <p>32500 Р.</p>
-          <button type="button">25500 Р.</button>
+          <p>25500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 3000</h3>
           <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <div>
+            <button>Купить</button>
+            <button>В закладки</button>
+          </div>
           <p>22500 Р.</p>
-          <button type="button">15500 Р.</button>
+          <p>15500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
           <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <div>
+            <button>Купить</button>
+            <button>В закладки</button>
+          </div>
           <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
+          <p>25500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 2000</h3>
           <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <div>
+            <button>Купить</button>
+            <button>В закладки</button>
+          </div>
           <!-- <p>12500 Р.</p> -->
-          <button type="button">12500 Р.</button>
+          <p>12500 Р.</p>
         </article>
       </section>
       <section>
         <h2>Популярные производители</h2>
         <a href="catalog.html">Все производители</a>
-        <article>
-          <h3>Bosch</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Bosch"></a>
-        </article>
-        <article>
-          <h3>Makita</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Makita"></a>
-        </article>
-        <article>
-          <h3>DeWALT</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="DeWALT"></a>
-        </article>
-        <article>
-          <h3>Интерскол</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Интерскол"></a>
-        </article>
-        <article>
-          <h3>Hitachi</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Hitachi"></a>
-        </article>
-        <article>
-          <h3>Lg</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Lg"></a>
-        </article>
-        <article>
-          <h3>Aeg Power Solutions</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="Aeg Power Solutions"></a>
-        </article>
-        <article>
-          <h3>metabo</h3>
-          <a href="#"><img src="https://via.placeholder.com/220x145" alt="metabo work. dont play."></a>
-        </article>
+        <ul>
+          <li>
+            <h3>Bosch</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Bosch"></a>
+          </li>
+          <li>
+            <h3>Makita</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Makita"></a>
+          </li>
+          <li>
+            <h3>DeWALT</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="DeWALT"></a>
+          </li>
+          <li>
+            <h3>Интерскол</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Интерскол"></a>
+          </li>
+          <li>
+            <h3>Hitachi</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Hitachi"></a>
+          </li>
+          <li>
+            <h3>Lg</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Lg"></a>
+          </li>
+          <li>
+            <h3>Aeg Power Solutions</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Aeg Power Solutions"></a>
+          </li>
+          <li>
+            <h3>metabo</h3>
+            <a href="#"><img src="https://via.placeholder.com/220x145" alt="metabo work. dont play."></a>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Сервисы</h2>
-        <div>
-          <p>Доставка</p>
-        </div>
-        <div>
-          <p>Гарантия</p>
-        </div>
-        <div>
-          <p>Кредит</p>
-        </div>
+        <ul>
+          <li><p>Доставка</p></li>
+          <li><p>Гарантия</p></li>
+          <li><p>Кредит</p></li>
+        </ul>
         <section>
-          <h3>Доставка</h3>
+          <h3>Описание сервиса "Доставка"</h3>
           <p>Мы с удовольствием доставим ваш товар прямо 
             к вашему подъезду совершенно бесплатно!
             Ведь мы неплохо заработаем, 
