--- a/catalog.html
+++ b/catalog.html
@@ -106,7 +106,7 @@
       <h2>Карточки товаров</h2>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <img src="img\b-6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -114,7 +114,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <img src="img\b-6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -122,59 +122,59 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <img src="img\b-6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
+          <h3>Перфоратор Bosch bfg 3000</h3>
+          <img src="img\b-3000.jpg" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+        </article>
+        <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <img src="img\b-6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
+          <h3>Перфоратор Bosch bfg 2000</h3>
+          <img src="img\bosch-2000.jpg" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>30500 Р.</p>
+          <p>12500 Р.</p>
+        </article>
+        <article>
+          <h3>Перфоратор Bosch bfg 3000</h3>
+          <img src="img\b-3000.jpg" alt="фото инструмента">
+          <button>Купить</button>
+          <button>В закладки</button>
+          <p>22500 Р.</p>
+          <p>15500 Р.</p>
+        </article>
+        <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src=" https://via.placeholder.com/144x128" alt="фото инструмента">
+          <img src="img\b-6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
+          <h3>Перфоратор Bosch bfg 2000</h3>
+          <img src="img\bosch-2000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
-          <p>25500 Р.</p>
-        </article>
-        <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
-        </article>
-        <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
-        </article>
-        <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="https://via.placeholder.com/144x128" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p>12500 Р.</p>
         </article>
     </section>
     <section>
