--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <a href="catalog.html">На все популярные товары</a>
         <article>
           <h3>Перфоратор Bosch bfg 9000</h3>
-          <img src=" https://via.placeholder.com/184x164" alt="фото инструмента">
+          <img src="img\b-9000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -111,7 +111,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 3000</h3>
-          <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
+          <img src="img\b-3000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -121,7 +121,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
+          <img src="img\b-6000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -131,7 +131,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 2000</h3>
-          <img src=" https://via.placeholder.com/127x112" alt="фото инструмента">
+          <img src="img\bosch-2000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -146,35 +146,35 @@
         <ul>
           <li>
             <h3>Bosch</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Bosch"></a>
+            <a href="#"><img src="img\bosch.jpg" alt="Bosch"></a>
           </li>
           <li>
             <h3>Makita</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Makita"></a>
+            <a href="#"><img src="img\makita.jpg" alt="Makita"></a>
           </li>
           <li>
             <h3>DeWALT</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="DeWALT"></a>
+            <a href="#"><img src="img\dewalt.jpg" alt="DeWALT"></a>
           </li>
           <li>
             <h3>Интерскол</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Интерскол"></a>
+            <a href="#"><img src="img\inter.jpg" alt="Интерскол"></a>
           </li>
           <li>
             <h3>Hitachi</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Hitachi"></a>
+            <a href="#"><img src="img\hitachi.jpg" alt="Hitachi"></a>
           </li>
           <li>
             <h3>Lg</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Lg"></a>
+            <a href="#"><img src="img\LG.jpg" alt="Lg"></a>
           </li>
           <li>
             <h3>Aeg Power Solutions</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="Aeg Power Solutions"></a>
+            <a href="#"><img src="img\AEG.jpg" alt="Aeg Power Solutions"></a>
           </li>
           <li>
             <h3>metabo</h3>
-            <a href="#"><img src="https://via.placeholder.com/220x145" alt="metabo work. dont play."></a>
+            <a href="#"><img src="img\metabo.jpg" alt="metabo work. dont play."></a>
           </li>
         </ul>
       </section>
@@ -221,7 +221,7 @@
         <p>Вы можете забрать товар сами, 
           заехав в наш офис:
         </p>
-        <a href="#"><img src="https://via.placeholder.com/300x158" alt="изображение магазина на карте города"></a>
+        <a href="#"><img src="img\map.jpg" alt="изображение магазина на карте города"></a>
         <a href="blank.html">Заблудились? Напишите нам!</a> 
       </section>
     </main>
