--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <section>
-        <a href="#"><img src="https://via.placeholder.com/220x47" alt="логотип магазина"></a>
+        <a href="#"><img src="img/logo.svg" alt="логотип магазина"></a>
         <h2>Панель пользователя</h2>
         <form action="POST" >
           <input type="search" placeholder="Поиск">
@@ -28,11 +28,11 @@
           <button type="button">Войти</button>
           <button type="button">Регистрация</button>
           <a href="blank.html">
-            <img src="https://via.placeholder.com/20x18" alt="иконка пользователя">
+            <img src="img/icon_user.png" alt="иконка пользователя">
             Равшан Джамшутович
           </a>
           <a href="">
-            <img src="https://via.placeholder.com/20x17" alt="кнопка выхода">
+            <img src="img/icon_logout.png" alt="кнопка выхода">
           </a>
           <a href="blank.html">Мои заказы</a>
           <a href="blank.html">Личный кабинет</a>
@@ -101,7 +101,7 @@
         <a href="catalog.html">На все популярные товары</a>
         <article>
           <h3>Перфоратор Bosch bfg 9000</h3>
-          <img src="img\b-9000.jpg" alt="фото инструмента">
+          <img src="img/bosch_9000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -111,7 +111,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 3000</h3>
-          <img src="img\b-3000.jpg" alt="фото инструмента">
+          <img src="img\bosch_3000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -121,7 +121,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="img\b-6000.jpg" alt="фото инструмента">
+          <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -131,7 +131,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 2000</h3>
-          <img src="img\bosch-2000.jpg" alt="фото инструмента">
+          <img src="img\bosch_2000.jpg" alt="фото инструмента">
           <div>
             <button>Купить</button>
             <button>В закладки</button>
@@ -170,7 +170,7 @@
           </li>
           <li>
             <h3>Aeg Power Solutions</h3>
-            <a href="#"><img src="img\AEG.jpg" alt="Aeg Power Solutions"></a>
+            <a href="#"><img src="img\aeg.jpg" alt="Aeg Power Solutions"></a>
           </li>
           <li>
             <h3>metabo</h3>
@@ -226,7 +226,7 @@
       </section>
     </main>
     <footer>
-      <a href="#"><img src="https://via.placeholder.com/220x68" alt="логотип магазина"></a>
+      <a href="#"><img src="img/logo_footer.svg" alt="логотип магазина"></a>
       <section>
         <h2>Навигация по страницам сайта</h2>  
         <nav>
