--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <section>
-      <a href="#"><img src="https://via.placeholder.com/220x47" alt="логотип магазина"></a>
+      <a href="#"><img src="img/logo.svg" alt="логотип магазина"></a>
       <h2>Панель пользователя</h2>
       <form action="POST" >
         <input type="search" placeholder="Поиск">
@@ -28,11 +28,11 @@
         <button type="button">Войти</button>
         <button type="button">Регистрация</button>
         <a href="blank.html">
-          <img src="https://via.placeholder.com/20x18" alt="иконка пользователя">
+          <img src="img/icon_user.png" alt="иконка пользователя">
           Равшан Джамшутович
         </a>
         <a href="">
-          <img src="https://via.placeholder.com/20x17" alt="кнопка выхода">
+          <img src="img/icon_logout.png" alt="кнопка выхода">
         </a>
         <a href="blank.html">Мои заказы</a>
         <a href="blank.html">Личный кабинет</a>
@@ -78,16 +78,16 @@
             <ul>
               <li><input type="radio"> Bosch</li>
               <li><input type="radio">Интерскол</li>
-              <li><input type="radio" >Makita</li>
-              <li><input type="radio" >Dewalt</li>
-              <li><input type="radio" >Hitachi</li>
+              <li><input type="radio">Makita</li>
+              <li><input type="radio">Dewalt</li>
+              <li><input type="radio">Hitachi</li>
             </ul>
           </div>
           <div>
             <h3>Питание:</h3>
             <ul>
-              <li><input type="radio" >Аккумуляторные</li>
-              <li><input type="radio" >Сетевые</li>
+              <li><input type="radio">Аккумуляторные</li>
+              <li><input type="radio">Сетевые</li>
             </ul>
           </div>
           <input type="submit" value="Показать">
@@ -106,7 +106,7 @@
       <h2>Карточки товаров</h2>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="img\b-6000.jpg" alt="фото инструмента">
+          <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -114,7 +114,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="img\b-6000.jpg" alt="фото инструмента">
+          <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -122,7 +122,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="img\b-6000.jpg" alt="фото инструмента">
+          <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -130,7 +130,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 3000</h3>
-          <img src="img\b-3000.jpg" alt="фото инструмента">
+          <img src="img\bosch_3000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>22500 Р.</p>
@@ -138,7 +138,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="img\b-6000.jpg" alt="фото инструмента">
+          <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -146,7 +146,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 2000</h3>
-          <img src="img\bosch-2000.jpg" alt="фото инструмента">
+          <img src="img\bosch_2000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -154,7 +154,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 3000</h3>
-          <img src="img\b-3000.jpg" alt="фото инструмента">
+          <img src="img\bosch_3000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>22500 Р.</p>
@@ -162,7 +162,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="img\b-6000.jpg" alt="фото инструмента">
+          <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -170,7 +170,7 @@
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 2000</h3>
-          <img src="img\bosch-2000.jpg" alt="фото инструмента">
+          <img src="img\bosch_2000.jpg" alt="фото инструмента">
           <button>Купить</button>
           <button>В закладки</button>
           <p>30500 Р.</p>
@@ -194,7 +194,7 @@
     </section>
   </main>
   <footer>
-    <a href="#"><img src="https://via.placeholder.com/220x68" alt="логотип магазина"></a>
+    <a href="#"><img src="img/logo_footer.svg" alt="логотип магазина"></a>
     <section>
       <h2>Навигация по страницам сайта</h2>  
       <nav>
