5. Продолжаем подготовку графики
Добавил графику в проект

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <section>
-      <a href="#"><img src="img/logo.svg" alt="логотип магазина"></a>
+      <a href="index.html"><img src="img/logo.svg" alt="логотип магазина"></a>
       <h2>Панель пользователя</h2>
       <form action="POST" >
         <input type="search" placeholder="Поиск">
@@ -194,7 +194,7 @@
     </section>
   </main>
   <footer>
-    <a href="#"><img src="img/logo_footer.svg" alt="логотип магазина"></a>
+    <a href="index.html"><img src="img/logo_footer.svg" alt="логотип магазина"></a>
     <section>
       <h2>Навигация по страницам сайта</h2>  
       <nav>
