--- a/catalog.html
+++ b/catalog.html
@@ -7,10 +7,12 @@
 <body>
   <header>
     <section>
-      <a href="index.html"><img src="img/logo.svg" alt="логотип магазина"></a>
-      <h2>Панель пользователя</h2>
-      <form action="POST" >
-        <input type="search" placeholder="Поиск">
+      <a href="#"><img src="img/logo.svg" alt="логотип магазина"></a>
+      <h2 class="visually-hidden">Панель пользователя</h2>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <label>
+          <input type="search" name="search" placeholder="Поиск">
+        </label>
       </form>
       <a href="blank.html">Закладки</a>
       <a href="blank.html">Корзина</a>
@@ -39,7 +41,7 @@
       </div>  
     </div>
     <section>
-      <h2>Главная навигация по страницам сайта</h2>
+      <h2 class="visually-hidden">Главная навигация по страницам сайта</h2>
       <nav>
         <ul>
           <li><a href="index.html">Главная</a></li>
@@ -54,9 +56,9 @@
     </section>
   </header>
   <main>
-    <h1>ПЕРФОРАТОРЫ</h1>
+    <h1>Перфораторы</h1>
     <section>
-      <h2>Меню "хлебные крошки"</h2>
+      <h2 class="visually-hidden">Меню "хлебные крошки"</h2>
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="blank.html">Инструмент</a></li>
@@ -65,120 +67,166 @@
     </section>
     <section>
       <h2>Фильтр:</h2>
-      <aside>
-        <form action="https://echo.htmlacademy.ru/" method="POST">
-          <div>
-            <h3>Цена</h3>
-            <input type="text"> <!--Ползунок цены-->
-            <span></span> <!--цена мин-->
-            <span></span> <!--цена макс-->
-          </div>
-          <div>
-            <h3>Производители:</h3>
+        <form action="https://echo.htmlacademy.ru/" method="post">
+          <fieldset>
+            <legend>Цена</legend>
+            <label class="visually-hidden">
+              От:
+              <input type="text" name="price_min"></input> <!--цена мин-->
+            </label>
+            <label class="visually-hidden">
+              До:
+              <input type="text" name="price_max"></input>   <!--цена макс-->
+            </label>
+            <div></div> <!--Ползунок цены-->
+          </fieldset>
+          <fieldset>
+            <legend>Производители:</legend>
             <ul>
-              <li><input type="radio"> Bosch</li>
-              <li><input type="radio">Интерскол</li>
-              <li><input type="radio">Makita</li>
-              <li><input type="radio">Dewalt</li>
-              <li><input type="radio">Hitachi</li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Bosch" checked>
+                    Bosch
+                </label>  
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Интерскол">
+                  Интерскол
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Makita" checked>
+                  Makita
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Dewalt">
+                  Dewalt
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Hitachi">
+                  Hitachi
+                </label>
+              </li>
             </ul>
-          </div>
-          <div>
-            <h3>Питание:</h3>
+          </fieldset>
+          <fieldset>
+            <legend>Питание:</legend>
             <ul>
-              <li><input type="radio">Аккумуляторные</li>
-              <li><input type="radio">Сетевые</li>
+              <li>
+                <label>
+                  <input type="radio" name="power_supply" value="rechargeable" >
+                  Аккумуляторные
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="power_supply" value="mains_power">
+                  Сетевые
+                </label>
+              </li>
             </ul>
-          </div>
-          <input type="submit" value="Показать">
+          </fieldset>
+          <button type="submit">Показать</button>
         </form>
-      </aside>
     </section>
     <section>
       <h2>Сортировка:</h2>
       <p>По цене</p>
-      <p>По</p>
+      <p>По типу</p>
       <p>По функционалу</p>
-      <button>UP</button>
-      <button>DOWN</button>
+      <button class="visually-hidden">up</button>
+      <button class="visually-hidden">down</button>
     </section>
     <section>
       <h2>Карточки товаров</h2>
         <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
+          <h3 class="visually-hidden">Перфоратор Bosch bfg 6000</h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 3000</h3>
           <img src="img\bosch_3000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 2000</h3>
           <img src="img\bosch_2000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>30500 Р.</p>
           <p>12500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 3000</h3>
           <img src="img\bosch_3000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
         </article>
         <article>
           <h3>Перфоратор Bosch bfg 2000</h3>
           <img src="img\bosch_2000.jpg" alt="фото инструмента">
-          <button>Купить</button>
-          <button>В закладки</button>
+          <button class="visually-hidden">Купить</button>
+          <button class="visually-hidden">В закладки</button>
           <p>30500 Р.</p>
           <p>12500 Р.</p>
         </article>
     </section>
     <section>
-      <h2>Навигация по страницам</h2>
+      <h2 class="visually-hidden">Корзина</h2>
+      <p>Товар добавлен в корзину!</p>
+      <a href="blank.html">Оформить заказ</a>
+      <button type="button">Продолжить покупки</button>
+      <button class="visually-hidden" type="button">Закрыть</button>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Навигация по страницам</h2>
       <ul>
         <li><a href="#"></a>1</li>
         <li><a href="#"></a>2</li>
@@ -194,9 +242,9 @@
     </section>
   </main>
   <footer>
-    <a href="index.html"><img src="img/logo_footer.svg" alt="логотип магазина"></a>
+    <a href="#"><img src="img/logo_footer.svg" alt="логотип магазина"></a>
     <section>
-      <h2>Навигация по страницам сайта</h2>  
+      <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
       <nav>
         <ul>
           <li><a href="blank.html">Компания</a></li>
@@ -209,7 +257,7 @@
     </section>  
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
     <section>
-      <h2>навигация по товарам\услугам</h2>
+      <h2 class="visually-hidden">навигация по товарам\услугам</h2>
       <nav>
         <ul>
           <li><a href="blank.html">Материалы</a></li>
