--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <header>
       <section>
         <a href="#"><img src="img/logo.svg" alt="логотип магазина"></a>
-        <h2>Панель пользователя</h2>
-        <form action="POST" >
-          <input type="search" placeholder="Поиск">
+        <h2 class="visually-hidden">Панель пользователя</h2>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <label>
+            <input type="search" name="search" placeholder="Поиск">
+          </label>
         </form>
         <a href="blank.html">Закладки</a>
         <a href="blank.html">Корзина</a>
@@ -39,7 +41,7 @@
         </div>  
       </div>
       <section>
-        <h2>Главная навигация по страницам сайта</h2>
+        <h2 class="visually-hidden">Главная навигация по страницам сайта</h2>
         <nav>
           <ul>
             <li><a href="index.html">Главная</a></li>
@@ -54,9 +56,9 @@
       </section>
     </header>
     <main>
-      <h1>Техномарт</h1>
+      <h1 class="visually-hidden">Техномарт</h1>
       <section>
-        <h2>Промо-блок</h2>
+        <h2 class="visually-hidden">Промо-блок</h2>
         <article>
           <h3>Материалы</h3>
           <a href="blank.html">На любой вкус</a>
@@ -103,8 +105,8 @@
           <h3>Перфоратор Bosch bfg 9000</h3>
           <img src="img/bosch_9000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="visually-hidden">Купить</button>
+            <button class="visually-hidden">В закладки</button>
           </div>
           <p>32500 Р.</p>
           <p>25500 Р.</p>
@@ -113,8 +115,8 @@
           <h3>Перфоратор Bosch bfg 3000</h3>
           <img src="img\bosch_3000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="visually-hidden">Купить</button>
+            <button class="visually-hidden">В закладки</button>
           </div>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
@@ -123,8 +125,8 @@
           <h3>Перфоратор Bosch bfg 6000</h3>
           <img src="img\bosch_6000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="visually-hidden">Купить</button>
+            <button class="visually-hidden">В закладки</button>
           </div>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
@@ -133,8 +135,8 @@
           <h3>Перфоратор Bosch bfg 2000</h3>
           <img src="img\bosch_2000.jpg" alt="фото инструмента">
           <div>
-            <button>Купить</button>
-            <button>В закладки</button>
+            <button class="visually-hidden">Купить</button>
+            <button class="visually-hidden">В закладки</button>
           </div>
           <!-- <p>12500 Р.</p> -->
           <p>12500 Р.</p>
@@ -145,35 +147,35 @@
         <a href="catalog.html">Все производители</a>
         <ul>
           <li>
-            <h3>Bosch</h3>
+            <h3 class="visually-hidden">Bosch</h3>
             <a href="#"><img src="img\bosch.jpg" alt="Bosch"></a>
           </li>
           <li>
-            <h3>Makita</h3>
+            <h3 class="visually-hidden">Makita</h3>
             <a href="#"><img src="img\makita.jpg" alt="Makita"></a>
           </li>
           <li>
-            <h3>DeWALT</h3>
+            <h3 class="visually-hidden">DeWALT</h3>
             <a href="#"><img src="img\dewalt.jpg" alt="DeWALT"></a>
           </li>
           <li>
-            <h3>Интерскол</h3>
+            <h3 class="visually-hidden">Интерскол</h3>
             <a href="#"><img src="img\inter.jpg" alt="Интерскол"></a>
           </li>
           <li>
-            <h3>Hitachi</h3>
+            <h3 class="visually-hidden">Hitachi</h3>
             <a href="#"><img src="img\hitachi.jpg" alt="Hitachi"></a>
           </li>
           <li>
-            <h3>Lg</h3>
+            <h3 class="visually-hidden">Lg</h3>
             <a href="#"><img src="img\LG.jpg" alt="Lg"></a>
           </li>
           <li>
-            <h3>Aeg Power Solutions</h3>
+            <h3 class="visually-hidden">Aeg Power Solutions</h3>
             <a href="#"><img src="img\aeg.jpg" alt="Aeg Power Solutions"></a>
           </li>
           <li>
-            <h3>metabo</h3>
+            <h3 class="visually-hidden">metabo</h3>
             <a href="#"><img src="img\metabo.jpg" alt="metabo work. dont play."></a>
           </li>
         </ul>
@@ -222,13 +224,44 @@
           заехав в наш офис:
         </p>
         <a href="#"><img src="img\map.jpg" alt="изображение магазина на карте города"></a>
-        <a href="blank.html">Заблудились? Напишите нам!</a> 
+        <button type="button">Заблудились? Напишите нам!</button> 
+      </section>
+      <section>
+        <h2 class="visually-hidden">Напишите нам</h2>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <p>
+            <label>
+            Ваше имя:
+            <input type="text" name="name" placeholder="Имя Фамилия"> 
+            </label>
+          </p>
+          <p>
+            <label>
+            Ваша e-mail:
+            <input type="e-mail" name="e-mail" placeholder="email@example.com">
+            </label>
+          </p>
+          <p>
+            <label>
+            Текс письма:
+            <input type="text" name="content_letter" placeholder="В свободной форме">
+            </label>
+          </p>
+          <button type="submit">Отправить</button>
+        </form>
+        <button class="visually-hidden" type="button">Закрыть</button>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Виджет карты города</h2>
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A12307483c981de1bff2ca94339040183ba5f9de282b3f0b2ccdae7b0bd9d4814&amp;source=constructor" width="500" height="400" frameborder="0">
+        </iframe>
+        <button class="visually-hidden" type="button">Закрыть</button>
       </section>
     </main>
     <footer>
       <a href="#"><img src="img/logo_footer.svg" alt="логотип магазина"></a>
       <section>
-        <h2>Навигация по страницам сайта</h2>  
+        <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
         <nav>
           <ul>
             <li><a href="blank.html">Компания</a></li>
@@ -241,7 +274,7 @@
       </section>  
       <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
       <section>
-        <h2>навигация по товарам\услугам</h2>
+        <h2 class="visually-hidden">навигация по товарам\услугам</h2>
         <nav>
           <ul>
             <li><a href="blank.html">Материалы</a></li>
