--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <a href="#"><img src="img\map.jpg" alt="изображение магазина на карте города"></a>
         <button type="button">Заблудились? Напишите нам!</button> 
       </section>
-      <section>
+      <section class="visually-hidden">
         <h2 class="visually-hidden">Напишите нам</h2>
         <form action="https://echo.htmlacademy.ru" method="post">
           <p>
@@ -251,7 +251,7 @@
         </form>
         <button class="visually-hidden" type="button">Закрыть</button>
       </section>
-      <section>
+      <section class="visually-hidden"> 
         <h2 class="visually-hidden">Виджет карты города</h2>
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A12307483c981de1bff2ca94339040183ba5f9de282b3f0b2ccdae7b0bd9d4814&amp;source=constructor" width="500" height="400" frameborder="0">
         </iframe>
